<resources>
    <string name="app_name">Football Match Schedule</string>
    <string name="tab_title_past_match">LAST MATCH</string>
    <string name="tab_title_next_match">NEXT MATCH</string>
    <string name="tab_title_standings">STANDINGS</string>
    <string name="tab_title_team">TEAM</string>
    <string name="tab_title_favorite_match">MATCH</string>
    <string name="tab_title_favorite_team">TEAM</string>
    <string name="empty_data">-</string>
    <string name="match_round">Round %s</string>
    <string name="search_match">Search Match</string>
    <string name="search_team">Search Team</string>
    <string name="match_detail">Match Detail</string>
    <string name="team_detail">Team Detail</string>
    <string name="match_postponed">Match Postponed</string>
    <string name="match_fulltime">Full Time</string>
    <string name="match_statistic">Match Statistic</string>
    <string name="formation">Formation</string>
    <string name="goal">Goal</string>
    <string name="shot">Shot</string>
    <string name="red_card">Red Card</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="lineup">Lineup</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="defender">Defender</string>
    <string name="midfielder">Midfielder</string>
    <string name="striker">Striker</string>
    <string name="colon">:</string>
    <string name="search_menu">Search</string>
    <string name="image_home_team">image_home_team</string>
    <string name="image_away_team">image_away_team</string>
    <string name="league_images">League Images</string>
    <string name="league_detail">League Detail</string>
    <string name="favorite_menu">Favorite</string>
    <string name="match_favorite_menu">Match Favorite</string>
    <string name="favorite_toolbar">Favorite</string>
    <string name="image_team">Image Team</string>
    <string name="goal_plus_minus">%1$d-%2$d</string>
    <string name="detail_team_stadium">Stadium : %s</string>
    <string name="lb_table_position">#</string>
    <string name="lb_table_team">Team</string>
    <string name="lb_table_played">Pl</string>
    <string name="lb_table_win">W</string>
    <string name="lb_table_draw">D</string>
    <string name="lb_table_loss">L</string>
    <string name="lb_table_goal_plus_minus">+/-</string>
    <string name="lb_table_goal_difference">GD</string>
    <string name="lb_table_points">Pts</string>

</resources>
