<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_match_round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            tools:text="Round 1" />

        <TextView
            android:id="@+id/tv_match_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_match_round"
            app:layout_constraintVertical_bias="0"
            tools:text="10 Januari 2010 / 08:00 GMT +7" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrain_home_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_match_schedule"
            app:layout_constraintVertical_bias="0">

            <ImageView
                android:id="@+id/img_match_home_team"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/image_home_team"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintVertical_bias="0"
                tools:background="@color/light_gray" />

            <TextView
                android:id="@+id/tv_match_home_team"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="@+id/img_match_home_team"
                app:layout_constraintEnd_toStartOf="@id/tv_match_home_score"
                app:layout_constraintStart_toEndOf="@id/img_match_home_team"
                app:layout_constraintTop_toTopOf="@id/img_match_home_team"
                tools:text="Manchester United" />

            <TextView
                android:id="@+id/tv_match_home_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_data"
                app:layout_constraintBottom_toBottomOf="@id/img_match_home_team"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/img_match_home_team" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constrain_home_team">

            <ImageView
                android:id="@+id/img_match_away_team"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/image_away_team"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:background="@color/light_gray" />

            <TextView
                android:id="@+id/tv_match_away_team"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/img_match_away_team"
                app:layout_constraintEnd_toStartOf="@id/tv_match_away_score"
                app:layout_constraintStart_toEndOf="@id/img_match_away_team"
                app:layout_constraintTop_toTopOf="@id/img_match_away_team"
                tools:text="Manchester City" />

            <TextView
                android:id="@+id/tv_match_away_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_data"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintBottom_toBottomOf="@id/img_match_away_team"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/img_match_away_team" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>